tests/invalid/test10_invalid.imagelang
int f(int a, int b) {
    return a + b;
}

{
    f(1);
}
